bugfix exceptions