@@ -4,9 +4,12 @@ import br.edu.infnet.tiago.shared.utils.ListUtils;
 import lombok.AllArgsConstructor;
 import lombok.NoArgsConstructor;
 import lombok.With;
+import org.springframework.context.MessageSourceResolvable;
+import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpStatus;
 import org.springframework.validation.BindingResult;
 import org.springframework.validation.FieldError;
+import org.springframework.validation.method.ParameterValidationResult;
 import org.springframework.web.context.request.ServletWebRequest;
 import org.springframework.web.context.request.WebRequest;
 
@@ -15,6 +18,7 @@ import java.util.List;
 
 import static br.edu.infnet.tiago.shared.utils.StringUtils.nullToEmpty;
 import static java.util.Objects.isNull;
+import static java.util.stream.Collectors.toList;
 
 @With
 @AllArgsConstructor
@@ -31,6 +35,8 @@ public class ProblemBuilder {
 
     private BindingResult bindingResult;
 
+    private List<ParameterValidationResult> validationResults;
+
     public Problem build() {
         return new Problem()
                 .withTitle(status.getReasonPhrase())
@@ -38,21 +44,35 @@ public class ProblemBuilder {
                 .withType(nullToEmpty(type))
                 .withStatus(status.value())
                 .withInstance(((ServletWebRequest) request).getRequest().getRequestURI())
-                .withViolations(buildViolations(bindingResult));
+                .withViolations(buildViolations(bindingResult, validationResults));
     }
 
-    private List<Violation> buildViolations(BindingResult errors) {
+    private List<Violation> buildViolations(BindingResult bindErrors, List<ParameterValidationResult> validationErrors) {
 
         List<Violation> violations = new ArrayList<>();
-        if (isNull(errors) || ListUtils.isNullOrEmpty(errors.getAllErrors())) return violations;
 
-        violations = errors.getAllErrors()
-                .stream()
-                .map(error -> {
-                    String name = error instanceof FieldError ? ((FieldError) error).getField() : error.getObjectName();
-                    return new Violation(name, error.getDefaultMessage());
-                })
-                .toList();
+        if (!isNull(bindErrors) && !ListUtils.isNullOrEmpty(bindErrors.getAllErrors())) {
+            violations = bindErrors.getAllErrors()
+                    .stream()
+                    .map(error -> {
+                        String name = error instanceof FieldError ? ((FieldError) error).getField() : error.getObjectName();
+                        return new Violation(name, error.getDefaultMessage());
+                    })
+                    .collect(toList());
+        }
+        if (!ListUtils.isNullOrEmpty(validationErrors)) {
+            for (ParameterValidationResult validationResult : validationErrors) {
+                for (MessageSourceResolvable sourceResolvable : validationResult.getResolvableErrors()) {
+                    if (!isNull(sourceResolvable.getArguments())) {
+                        for (Object argument : sourceResolvable.getArguments()) {
+                            if (argument instanceof DefaultMessageSourceResolvable messageSourceResolvable) {
+                                violations.add(new Violation(messageSourceResolvable.getCode(), sourceResolvable.getDefaultMessage()));
+                            }
+                        }
+                    }
+                }
+            }
+        }
         return violations;
     }
 }
